components/bibtemplate/src/styles/style.scss
@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;

#bibTemplate {
  display: flex;
  overflow: hidden;
  height: 100%;
  max-height: 100%;
  flex-direction: column;
}

#headerContainer {
  display: flex;
  flex-direction: column;
  padding: var(--ds-size-200, #{vac.$ds-size-200});
  padding-top: var(--ds-size-400, #{vac.$ds-size-400});
  padding-bottom: 0;

  .titleRow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: var(--ds-size-100, #{vac.$ds-size-100});
  }

  .header {
    max-width: calc(100vw - var(--ds-size-900, #{vac.$ds-size-900}));
    padding-top: var(--ds-size-200, #{vac.$ds-size-200});
  }

  .subheader {
    width: 100%;
  }
}

#closeButton {
  [auro-icon] {
    --ds-auro-icon-size: var(--ds-size-500, #{vac.$ds-size-500});
  }
}

#bodyContainer {
  position: relative;
  flex: 1 1 100%;
}

:host([isfullscreen]) {
  #bibTemplate {
    max-height: 100dvh;
  }

  #bodyContainer {
    margin-top: var(--ds-size-100, #{vac.$ds-size-100});
  }
}

#footerContainer{
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: var(--ds-size-200, #{vac.$ds-size-200});
}

